fix wordwrap on url link

--- a/client/src/styles/modules/_dashboard.scss
+++ b/client/src/styles/modules/_dashboard.scss
@@ -64,3 +64,7 @@
     float: right;
   }
 }
+
+.response-url {
+  word-wrap: break-word;
+}
